syntax = "proto3";

package agencysrv;

option go_package = "proto;agencysrv";

service AgencySrv {
	rpc ReadAgencyDetails(ReadAgencyRequest) returns (ReadAgencyResponse) {}
	rpc AddAgency(AddAgencyRequest) returns (AddAgencyResponse) {}
	rpc UpdateAgency(UpdateAgencyRequest) returns (UpdateAgencyResponse) {}
	rpc DeleteAgency(DeleteAgencyRequest) returns (DeleteAgencyResponse) {}
}

message Class {
	string classID = 1;
	float price = 2;
	string name = 3;
	string age = 4;
	int32 stuNumber = 5;
	string level = 6;
}

message Agency {
	string agencyID = 1;
	string name = 2;
	string tel = 3;
	float rating = 4;
	int32 comments = 5;
	string order = 6;
	repeated string tags = 7;
	string address = 8;
	string addressDetail = 9;
	float distance = 10;
	string icon = 11;
	repeated string photos = 12;
	repeated Class classes = 13;
}

message ReadAgencyRequest {
	string agencyID = 1;
	string name = 2;
	repeated string tags = 3;
	repeated string filter_items = 4;
	string s = 5; // search
}

message ReadAgencyResponse {
	int32 status = 1;
	repeated Agency agencies = 2;
	string msg = 3;
}

message AddAgencyRequest {
	Agency agency = 1;
}

message AddAgencyResponse {
	int32 status = 1;
	string agencyID = 2;
	string msg = 3;
}

message UpdateAgencyRequest {
	string AgencyID = 1;
	Agency agency = 2;
}

message UpdateAgencyResponse {
	int32 status = 1;
	string msg = 2;
}

message DeleteAgencyRequest {
	string AgencyID = 1;
}

message DeleteAgencyResponse {
	int32 status = 1;
	string msg = 2;
}


